Updated detection module, Created Classification Module, Completed integrated Scoring

--- a/notebooks/data_processing/lookup_file_creation.ipynb
+++ b/notebooks/data_processing/lookup_file_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,61 +20,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/media/premium/common-biscuit/main/planogram_biscuit\n"
+     ]
+    }
+   ],
    "source": [
-    "module_path = os.path.abspath(os.path.join('../../src/'))\n",
+    "module_path = os.path.abspath(os.path.join('../../'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "\n",
-    "%cd ../../src/"
+    "%cd ../../"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "  0%|                                                                                          | 0/209 [00:00<?, ?it/s]\n",
-      "\n",
-      "  2%|█▌                                                                                | 4/209 [00:01<00:53,  3.84it/s]\n",
-      "\n",
-      " 11%|████████▌                                                                        | 22/209 [00:01<00:34,  5.43it/s]\n",
-      "\n",
-      " 18%|██████████████▎                                                                  | 37/209 [00:01<00:22,  7.64it/s]\n",
-      "\n",
-      " 26%|████████████████████▉                                                            | 54/209 [00:01<00:14, 10.70it/s]\n",
-      "\n",
-      " 34%|███████████████████████████▉                                                     | 72/209 [00:01<00:09, 14.85it/s]\n",
-      "\n",
-      " 41%|█████████████████████████████████▎                                               | 86/209 [00:01<00:06, 20.18it/s]\n",
-      "\n",
-      " 50%|███████████████████████████████████████▊                                        | 104/209 [00:01<00:03, 27.44it/s]\n",
-      "\n",
-      " 58%|██████████████████████████████████████████████▋                                 | 122/209 [00:01<00:02, 36.69it/s]\n",
-      "\n",
-      " 68%|██████████████████████████████████████████████████████▎                         | 142/209 [00:01<00:01, 48.60it/s]\n",
-      "\n",
-      " 76%|████████████████████████████████████████████████████████████▊                   | 159/209 [00:02<00:00, 61.83it/s]\n",
-      "\n",
-      " 84%|███████████████████████████████████████████████████████████████████▎            | 176/209 [00:02<00:00, 73.30it/s]\n",
-      "\n",
-      " 92%|█████████████████████████████████████████████████████████████████████████▉      | 193/209 [00:02<00:00, 86.68it/s]\n",
-      "\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 209/209 [00:02<00:00, 100.30it/s]\n",
-      "\n"
+      "100%|██████████| 1606/1606 [00:01<00:00, 923.38it/s]\n"
      ]
     }
    ],
    "source": [
-    "annotations_folder = \"data/raw/annotation_masters\"\n",
+    "annotations_folder = \"data/raw/annotations_master/\"\n",
     "samples = os.listdir(annotations_folder)\n",
     "counter = Counter()\n",
     "for sample in tqdm(samples):\n",
@@ -92,84 +71,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'mamut_clasico_paquetin_strip': 68,\n",
-       "         'bizcochitos_clasica_bolsa': 53,\n",
-       "         'delicias_bolsa': 107,\n",
-       "         'ricanelas_paquetin': 103,\n",
-       "         'florentinas_cajeta_paquetin': 85,\n",
-       "         'florentinas_fresa_paquetin': 82,\n",
-       "         'marias_doradas': 78,\n",
-       "         'chokis_clasico_rollo': 305,\n",
-       "         'emperador_piruetas': 250,\n",
-       "         'emperador_chocolate': 400,\n",
-       "         'cremax_de_nieve_vainilla': 173,\n",
-       "         'cremax_de_nieve_fresa': 196,\n",
-       "         'senzo_mix_paquetin': 230,\n",
-       "         'giro_chocolate_paquetin': 205,\n",
-       "         'emperador_nuez': 188,\n",
-       "         'emperador_nocturno': 114,\n",
-       "         'emperador_vainilla_paquetin': 173,\n",
-       "         'emperador_combinado': 146,\n",
-       "         'chokis_brownie_paquetin': 40,\n",
-       "         'arcoiris_fruts_paquetin': 208,\n",
-       "         'chokis_chokomax_paquetin': 177,\n",
-       "         'choko_chokis_paquetin': 183,\n",
-       "         'cremax_de_nieve_chocolate': 174,\n",
-       "         'crackets_regular_rollo': 584,\n",
-       "         'saladitas_clasica_paquetin': 76,\n",
-       "         'marias_clasica_rollo': 397,\n",
-       "         'marias_azucaradas_rollo': 298,\n",
-       "         'rack row': 764,\n",
-       "         'complete rack': 110,\n",
-       "         'mini_marias_bolsa_strip': 27,\n",
-       "         'maravillas_strip': 20,\n",
-       "         'maravillas': 87,\n",
-       "         'flor_de_naranjo_paquetin': 63,\n",
-       "         'chokis_chocotella_paquetin': 16,\n",
-       "         'arcoiris_clasico_paquetin': 243,\n",
-       "         'bombitos_clasica_bolsa': 67,\n",
-       "         'habaneras_integrales_rollo': 42,\n",
-       "         'minichokis_bolsa_strip': 49,\n",
-       "         'chocolatines_paquetin_strip': 7,\n",
-       "         'mini_mamut_caddie_strip': 4,\n",
-       "         'other': 50,\n",
-       "         'flipy_caddie_strip': 9,\n",
-       "         'chocolatines_paquetin': 28,\n",
-       "         'barras_de_coco_paquetin': 29,\n",
-       "         'saladitas_clasica_caja': 17,\n",
-       "         'chokis_chocotella_paquetin_strip': 2,\n",
+       "Counter({'crackets_regular_rollo': 10670,\n",
+       "         'arcoiris_fruts_paquetin': 3590,\n",
+       "         'chokis_clasico_rollo': 5146,\n",
+       "         'chokis_chokomax_paquetin': 3350,\n",
+       "         'choko_chokis_paquetin': 3463,\n",
+       "         'emperador_nuez': 3444,\n",
+       "         'emperador_vainilla_paquetin': 3340,\n",
+       "         'senzo_mix_paquetin': 4661,\n",
+       "         'emperador_chocolate': 7171,\n",
+       "         'emperador_piruetas': 4157,\n",
+       "         'cremax_de_nieve_fresa': 3088,\n",
+       "         'cremax_de_nieve_chocolate': 3245,\n",
+       "         'cremax_de_nieve_vainilla': 2911,\n",
+       "         'delicias_bolsa': 1748,\n",
+       "         'marias_doradas': 1404,\n",
+       "         'ricanelas_paquetin': 1868,\n",
+       "         'mamut_clasico_paquetin_strip': 919,\n",
+       "         'mini_marias_bolsa_strip': 277,\n",
+       "         'saladitas_clasica_paquetin': 1483,\n",
+       "         'arcoiris_clasico_paquetin': 4528,\n",
+       "         'florentinas_cajeta_paquetin': 876,\n",
+       "         'barras_de_coco_paquetin': 1393,\n",
+       "         'flor_de_naranjo_paquetin': 433,\n",
+       "         'bombitos_clasica_bolsa': 1064,\n",
+       "         'emperador_nocturno': 1920,\n",
+       "         'giro_chocolate_paquetin': 2866,\n",
+       "         'rack row': 12566,\n",
+       "         'complete rack': 1704,\n",
+       "         'marias_clasica_rollo': 6715,\n",
+       "         'marias_azucaradas_rollo': 5333,\n",
+       "         'emperador_combinado': 1683,\n",
+       "         'maravillas': 1367,\n",
+       "         'florentinas_fresa_paquetin': 863,\n",
+       "         'bizcochitos_clasica_bolsa': 849,\n",
+       "         'other': 865,\n",
+       "         'strip': 194,\n",
+       "         'bizcochitos_clasica_bolsa_strip': 86,\n",
+       "         'bombitos_clasica_bolsa_strip': 80,\n",
+       "         'mamut_clasico_paquetin': 107,\n",
+       "         'chokis_brownie_paquetin': 411,\n",
+       "         'minichokis_bolsa_strip': 575,\n",
+       "         'maravillas_strip': 241,\n",
+       "         'pancrema_clasica_paquetin': 79,\n",
+       "         'mini_marias_chocolate_bolsa_strip': 102,\n",
+       "         'flipy_caddie': 20,\n",
+       "         'galleta_de_avena_chocolate_gavena_60g_strip': 13,\n",
+       "         'marias_doradas_strip': 14,\n",
+       "         'barras_de_coco_paquetin_strip': 8,\n",
+       "         'habaneras_integrales_rollo': 429,\n",
+       "         'chokis_brownie_paquetin_strip': 19,\n",
+       "         'mini_mamut_caddie_strip': 24,\n",
+       "         'chocolatines_paquetin': 38,\n",
+       "         'saladitas_clasica_caja': 41,\n",
+       "         'mini_marias_bolsa': 71,\n",
+       "         'minichokis_bolsa': 72,\n",
+       "         'galleta_de_avena_chocolate_gavena_60g': 35,\n",
+       "         'mini_marias_chocolate_bolsa': 42,\n",
+       "         'galleta_de_avena_manzana_gavena_60g': 38,\n",
+       "         'chokis_chocotella_paquetin': 135,\n",
+       "         'others': 1,\n",
+       "         'galleta_de_avena_frutos_rojos_gavena_60g': 37,\n",
+       "         'flipy_caddie_strip': 43,\n",
+       "         'galleta_de_avena_granola_gavena_60g': 17,\n",
+       "         'chocolatines_paquetin_strip': 70,\n",
+       "         'galleta_de_avena_manzana_gavena_60g_strip': 39,\n",
+       "         'mini_mamut_caddie': 13,\n",
+       "         'emperador_chocolate.png': 2,\n",
+       "         'chokis_chocotella_paquetin_strip': 14,\n",
+       "         'flor_de_naranjo_paquetin_strip': 2,\n",
+       "         'galleta_de_avena_granola_gavena_60g_strip': 32,\n",
+       "         'galleta_de_avena_frutos_rojos_gavena_60g_strip': 37,\n",
+       "         'galleta_de_avena_moras_yog_gavena_60g_strip': 6,\n",
+       "         'galleta_de_avena_moras_yog_gavena_60g': 1,\n",
+       "         'cremax_de_nieve_fersa': 2,\n",
+       "         'cremax_de_nieve_surtido_caddie': 14,\n",
+       "         'delicias_bolsa_strip': 4,\n",
+       "         'saladitas_clasica_cajad': 1,\n",
        "         'cremas_de_nieve_surtido_caddie': 16,\n",
-       "         'chokis_brownie_paquetin_strip': 1,\n",
-       "         'mamut_clasico_paquetin': 5,\n",
-       "         'cremax_de_nieve_surtido_caddie': 2,\n",
-       "         'galleta_de_avena_granola_gavena_60g_strip': 5,\n",
-       "         'minichokis_bolsa': 2,\n",
-       "         'pancrema_clasica_paquetin': 1,\n",
-       "         'galleta_de_avena_moras_yog_gavena_60g_strip': 1,\n",
-       "         'marias_doradas_strip': 1,\n",
        "         'mini_marias_bols_strip': 1,\n",
-       "         'bombitos_clasica_bolsa_strip': 3,\n",
-       "         'bizcochitos_clasica_bolsa_strip': 3,\n",
-       "         'mini_marias_chocolate_bolsa_strip': 4,\n",
        "         'Complete Rack': 3,\n",
-       "         'strip': 2,\n",
-       "         'mini_mamut_caddie': 1,\n",
        "         'Other': 1,\n",
        "         'marias_azucaradas_rolload': 4,\n",
-       "         'galleta_de_avena_frutos_rojos_gavena_60g': 3,\n",
        "         'rack Row': 2,\n",
-       "         'delicias_bolsa_strip': 2,\n",
        "         'Strip': 1,\n",
-       "         'galleta_de_avena_frutos_rojos_gavena_60g_strip': 1})"
+       "         'cremax_de_nieve_fresa_strip': 8,\n",
+       "         'cremax_de_nieve_vainilla_strip': 5,\n",
+       "         'cremax_de_nieve_chocolate_strip': 9})"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +177,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "87"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -210,38 +227,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>mamut_clasico_paquetin_strip</td>\n",
+       "      <td>crackets_regular_rollo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>bizcochitos_clasica_bolsa</td>\n",
+       "      <td>arcoiris_fruts_paquetin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>delicias_bolsa</td>\n",
+       "      <td>chokis_clasico_rollo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>ricanelas_paquetin</td>\n",
+       "      <td>chokis_chokomax_paquetin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>florentinas_cajeta_paquetin</td>\n",
+       "      <td>choko_chokis_paquetin</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          label_annotation_file\n",
-       "0  mamut_clasico_paquetin_strip\n",
-       "1     bizcochitos_clasica_bolsa\n",
-       "2                delicias_bolsa\n",
-       "3            ricanelas_paquetin\n",
-       "4   florentinas_cajeta_paquetin"
+       "      label_annotation_file\n",
+       "0    crackets_regular_rollo\n",
+       "1   arcoiris_fruts_paquetin\n",
+       "2      chokis_clasico_rollo\n",
+       "3  chokis_chokomax_paquetin\n",
+       "4     choko_chokis_paquetin"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,35 +307,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "  0%|                                                                                           | 0/69 [00:00<?, ?it/s]\n",
-      "\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 69/69 [00:00<00:00, 4312.11it/s]\n",
-      "\n",
-      "  0%|                                                                                           | 0/69 [00:00<?, ?it/s]\n",
-      "\n",
-      "100%|███████████████████████████████████████████████████████████████████████████████| 69/69 [00:00<00:00, 13797.71it/s]"
+      "100%|██████████| 87/87 [00:00<00:00, 149367.35it/s]\n",
+      "100%|██████████| 87/87 [00:00<00:00, 209354.24it/s]\n"
      ]
     }
    ],
    "source": [
-    "## packets lookup \n",
+    "# # packets lookup \n",
     "# df['display_label'] = df['label_annotation_file'].progress_apply(lambda x: display_label_packets(x))\n",
     "# df['label_index']= df['label_annotation_file'].progress_apply(lambda x: label_index_packets(x))\n",
-    "# df.to_csv('lookups/packets_lookup.csv')\n",
+    "# df.to_csv('data/lookups/packets_lookup.csv')\n",
     "\n",
     "# rackrow lookup\n",
     "df['display_label'] = df['label_annotation_file'].progress_apply(lambda x: display_label_rackrow(x))\n",
     "df['label_index']= df['label_annotation_file'].progress_apply(lambda x: label_index_rackrow(x))\n",
-    "df.to_csv('lookups/rackrow_lookup.csv')"
+    "df.to_csv('data/lookups/rackrow_lookup.csv')"
    ]
   },
   {
@@ -330,9 +340,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b0a17e71cfb66f8415d4593289c0bacfa768b3c5271e5ec471dd4b1ffdc68e6e"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.6.13 64-bit ('pepsi': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -345,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
