Trained Classification epoch: 10, val_acc: 0.94

--- a/notebooks/classification/classification_training.ipynb
+++ b/notebooks/classification/classification_training.ipynb
@@ -183,6 +183,52 @@
       "2021-11-08 09:11:33.156559: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublasLt.so.11\n",
       "2021-11-08 09:11:33.226986: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.8\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "669/669 [==============================] - 546s 757ms/step - loss: 0.9918 - acc: 0.7612 - val_loss: 0.6078 - val_acc: 0.9134\n",
+      "Epoch 2/100\n",
+      "669/669 [==============================] - 504s 753ms/step - loss: 0.2974 - acc: 0.9283 - val_loss: 0.8577 - val_acc: 0.9026\n",
+      "Epoch 3/100\n",
+      "669/669 [==============================] - 503s 751ms/step - loss: 0.2451 - acc: 0.9410 - val_loss: 1.2364 - val_acc: 0.8935\n",
+      "Epoch 4/100\n",
+      "669/669 [==============================] - 503s 751ms/step - loss: 0.2056 - acc: 0.9499 - val_loss: 2.6225 - val_acc: 0.9270\n",
+      "\n",
+      "Epoch 00004: ReduceLROnPlateau reducing learning rate to 1.9999999494757503e-05.\n",
+      "Epoch 5/100\n",
+      "669/669 [==============================] - 503s 751ms/step - loss: 0.1526 - acc: 0.9618 - val_loss: 1.7665 - val_acc: 0.9477\n",
+      "Epoch 6/100\n",
+      "669/669 [==============================] - 503s 751ms/step - loss: 0.1270 - acc: 0.9668 - val_loss: 2.6641 - val_acc: 0.9486\n",
+      "Epoch 7/100\n",
+      "669/669 [==============================] - 498s 743ms/step - loss: 0.1126 - acc: 0.9697 - val_loss: 4.2124 - val_acc: 0.9473\n",
+      "\n",
+      "Epoch 00007: ReduceLROnPlateau reducing learning rate to 1.9999999494757505e-06.\n",
+      "Epoch 8/100\n",
+      "669/669 [==============================] - 504s 752ms/step - loss: 0.1083 - acc: 0.9697 - val_loss: 5.5556 - val_acc: 0.9460\n",
+      "Epoch 9/100\n",
+      "669/669 [==============================] - 503s 751ms/step - loss: 0.0981 - acc: 0.9723 - val_loss: 4.9816 - val_acc: 0.9480\n",
+      "Epoch 10/100\n",
+      "669/669 [==============================] - 504s 752ms/step - loss: 0.1002 - acc: 0.9725 - val_loss: 6.3360 - val_acc: 0.9469\n",
+      "\n",
+      "Epoch 00010: ReduceLROnPlateau reducing learning rate to 1.9999999949504855e-07.\n",
+      "Epoch 11/100\n",
+      "669/669 [==============================] - 503s 751ms/step - loss: 0.1015 - acc: 0.9709 - val_loss: 4.5406 - val_acc: 0.9488\n",
+      "Epoch 00011: early stopping\n",
+      "Training complete\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 14165/14165 [18:33<00:00, 12.72it/s]\n",
+      "100%|██████████| 14165/14165 [15:18<00:00, 15.43it/s]\n",
+      "  0%|          | 0/73 [00:00<?, ?it/s]/home/sumit-tyagi/sumit-ssd/common-biscuit/installs/anaconda3/envs/classify/lib/python3.8/site-packages/tensorflow/python/keras/engine/sequential.py:450: UserWarning: `model.predict_classes()` is deprecated and will be removed after 2021-01-01. Please use instead:* `np.argmax(model.predict(x), axis=-1)`,   if your model does multi-class classification   (e.g. if it uses a `softmax` last-layer activation).* `(model.predict(x) > 0.5).astype(\"int32\")`,   if your model does binary classification   (e.g. if it uses a `sigmoid` last-layer activation).\n",
+      "  warnings.warn('`model.predict_classes()` is deprecated and '\n",
+      "100%|██████████| 73/73 [01:06<00:00,  1.10it/s]\n"
+     ]
     }
    ],
    "source": [
