Compliance pipelines ready

--- a/notebooks/data_processing/yolo_annotations_file_prep.ipynb
+++ b/notebooks/data_processing/yolo_annotations_file_prep.ipynb
@@ -44,6 +44,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MX-G06133_0101553772_80300988_19',\n",
+       " '12425000~-98',\n",
+       " '15720100_1_2021-11-11_after']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'MX-G06133_0101553772_80300988_19.12425000~-98.15720100_1_2021-11-11_after.xml'.split(\".\")[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
