--- a/notebooks/data_processing/yolo_data_split.ipynb
+++ b/notebooks/data_processing/yolo_data_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,25 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "images = os.listdir('/media/premium/common-biscuit/main/planogram_biscuit/data/raw/all_images')"
+    "images = os.listdir('/media/premium/common-biscuit/main/planogram_biscuit/data/raw/annotations_master_642')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "101"
+       "642"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train, validate, test = np.split(images, [int(len(images)*0.8), int(len(images)*0.9)])"
+    "train, validate, test = np.split(images, [int(len(images)*1), int(len(images))])"
    ]
   },
   {
@@ -56,7 +56,7 @@
     {
      "data": {
       "text/plain": [
-       "(80, 10, 11)"
+       "(642, 0, 0)"
       ]
      },
      "execution_count": 15,
@@ -67,6 +67,13 @@
    "source": [
     "len(train), len(validate),len(test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
