--- a/notebooks/evaluation/sub_brand_detection.ipynb
+++ b/notebooks/evaluation/sub_brand_detection.ipynb
@@ -25,6 +25,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scoring.integrated_scoring import IntegratedScoring\n",
+    "i_s = IntegratedScoring(curr_model='integration')\n",
+    "i_s.scoring()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -74,7 +85,6 @@
     }
    ],
    "source": [
-    "from scoring.integrated_scoring import IntegratedScoring\n",
     "\n",
     "i_s = IntegratedScoring(curr_model='sub_brand_detection')\n",
     "\n",
